--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "barryvdh/laravel-debugbar": "^3.6",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
+        "guzzlehttp/guzzle": "^7.4",
         "jrm2k6/cloudder": "^0.7.0",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
